Fixed smaller screen display, will scroll with overflow

--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body{
     flex-direction: column;
     font-size: 25px;
     margin: 20px;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     font-family: Arial, sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* * {
@@ -295,8 +295,6 @@ button:active{
 
 
 
-
-
 #timer-display{
     display: flex;
     flex-direction: column;
@@ -317,11 +315,11 @@ footer{
     align-items: flex-end;
     justify-content: flex-start;
     box-sizing: border-box;
-    position: fixed;
+    /* position: fixed;
     bottom: 0;
-    left: 0;
+    left: 0; */
     width: 100%;
-    /* margin-top: auto; */
+    margin-top: auto;
 }
 
 footer img{
@@ -345,11 +343,6 @@ footer img{
 }
 
 
-/* #rounds-container{
-    display: flex;
-    flex-direction: column;
-} */
-
 
 .round-data{
     display: flex;
@@ -371,9 +364,6 @@ footer img{
     padding: 5px;
     gap: 10px;
 }
-
-
-
 
 
 
